2006-08-24  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/notes/show_title.rhtml: Add div.nndate entry.
	* donrails/app/views/notes/noteslist.rhtml: likewise.
	* donrails/public/stylesheets/araki.css: likewise.

	* donrails/app/controllers/login_controller.rb (LoginController::delete_article): Fix: When user input to delete/hide non exits id articles. Added check article exists or not before delete/hide.
	* donrails/test/functional/login_controller_test.rb (LoginControllerTest::test_delete_article): Add test for it.

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Fix cache sweep for show_category_noteslist.

	* donrails/config/routes.rb: Add routing for show_category_noteslist pagination.

2006-08-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/comment_mailer.rb (CommentMailer::notify): Fix when ADMIN_MAILADD is not defined. (Thanks \ay.)

	* donrails/config/routes.rb: Add routing for show_category pagination.

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Fix cache sweep for show_category.

2006-08-15  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/helpers/application_helper.rb: Fix: When image_dump path is not existed.

2006-08-05  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/notes/rdf_recent.rxml: Encode change to UTF-8.

	* donrails/app/views/shared/authorhead.rhtml: Encode change to UTF-8.

	* donrails/app/controllers/notes_controller.rb (NotesController::show_image): Fix. In case for wrong (non exist) id number is imputted.

2006-08-03  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/login_controller.rb (LoginController::banlist_test_by_ar_string): Fix. I mistake column name in trackback table (wrong: blogname, correct: blog_name).

2006-08-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_indexabc): Add to test this fix.
