@@ -1,5 +1,12 @@
 Hello <%= @recipient %>,
 
-New comment is arrived from <%= @commenter %> (at <%= @now %>)
+New <%= @cort %> is arrived.
+  url:
+    <%= @url %>
+  for manage:
+    <%= @login_url %>
 
+It was written By <%= @commenter %> at <%= @now %>.
+----
 <%= @comment %>
+----
